--- a/tw/404.html
+++ b/tw/404.html
@@ -31,7 +31,7 @@
   
   
 
-  <link rel="icon" type="image/png" href="/images/site/favicon_hu8376fd15465fef26ffe66b6bcf0ca686_13669_42x0_resize_box_3.png" />
+  <link rel="icon" type="image/png" href="/images/site/logo-makiot_hu3114c8653bf1a36cca4662b2cf0c5ba3_26128_42x0_resize_q75_h2_box_2.webp" />
 
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
@@ -92,7 +92,7 @@
     </button>
     <a class="navbar-brand" href="/tw">
       
-        <img src="/images/site/main-logo_hu864bbe108f1be1ae04b57f7f2fd9d631_5637_42x0_resize_box_3.png" alt="Logo">
+        <img src="/images/site/logo-makiot_hu3114c8653bf1a36cca4662b2cf0c5ba3_26128_42x0_resize_q75_h2_box_2.webp" alt="Logo">
       不科學艾倫</a>
     <button class="navbar-toggler navbar-light" id="toc-toggler" type="button" onclick="toggleTOC()">
       <span class="navbar-toggler-icon"></span>
@@ -106,10 +106,10 @@
   </div>
   
   
-    <img src="/images/site/main-logo_hu864bbe108f1be1ae04b57f7f2fd9d631_5637_42x0_resize_box_3.png" class="d-none" id="main-logo" alt="Logo">
+    <img src="/images/site/logo-makiot_hu3114c8653bf1a36cca4662b2cf0c5ba3_26128_42x0_resize_q75_h2_box_2.webp" class="d-none" id="main-logo" alt="Logo">
   
   
-    <img src="/images/site/inverted-logo_hu8376fd15465fef26ffe66b6bcf0ca686_13669_42x0_resize_box_3.png" class="d-none" id="inverted-logo" alt="Inverted Logo">
+    <img src="/images/site/logo-makiot_hu3114c8653bf1a36cca4662b2cf0c5ba3_26128_42x0_resize_q75_h2_box_2.webp" class="d-none" id="inverted-logo" alt="Inverted Logo">
   
 </nav>
 
